# vivid-ide

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
crates/vivid/: Cargo.toml
crates/vivid-sys/: Cargo.toml  build.rs
crates/vivid-sys/src/: lib.rs
crates/vivid/src/: chain.rs  context.rs  error.rs  lib.rs  operator.rs
dev/plans/: REFACTOR.md
scripts/: build-release.sh
src/: main.ts  styles.css  types.ts  vivid-api.ts  vivid-connection.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_ops.rs  lib.rs  main.rs  output_capture.rs  pty.rs
src/api/: tauri.ts  vivid.ts
src/state/: store.ts
src/ui/: console.ts  editor.ts  inspector.ts  layout.ts  mcp-setup.ts  menu.ts  terminal.ts
src/ui/dock/: index.ts  theme.css
src/ui/dock/panels/: ConsolePanel.ts  EditorPanel.ts  InspectorPanel.ts  PerformancePanel.ts  PreviewPanel.ts  TerminalPanel.ts  index.ts
src/utils/: events.ts  mcp-config.ts
