[package]
name = "vivid-tauri"
version = "0.1.0"
description = "Vivid IDE - WebGPU creative coding with transparent webview overlay"
authors = ["Vivid"]
edition = "2021"

[lib]
name = "vivid_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "rt", "sync", "io-util"] }
log = "0.4"
env_logger = "0.11"
portable-pty = "0.8"
parking_lot = "0.12"
dirs = "6"

# Vivid embedding (uses C API under the hood)
vivid = { path = "../crates/vivid" }

# For getting native window handle
raw-window-handle = "0.6"

# Unix-specific dependencies for stdout/stderr capture
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# macOS-specific dependencies for NSWindow access
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView"] }
objc2-foundation = "0.3"
core-foundation = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
